# django-admin-material-able

./: LICENSE  MANIFEST  MANIFEST.in  README.rst  setup.cfg
django_admin_material_able.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
material_admin/: apps.py
material_admin/static/assets/css/: font-awesome-n.min.css  style.css
material_admin/static/assets/js/: pcoded.min.js
material_admin/static/assets/pages/dashboard/: custom-dashboard.js
material_admin/static/assets/pages/waves/css/: waves.min.css
material_admin/static/plugins/export/: export.min.js
material_admin/static/plugins/export/libs/fabric.js/: fabric.min.js
material_admin/static/plugins/export/libs/pdfmake/: pdfmake.min.js
material_admin/static/plugins/export/libs/xlsx/: xlsx.min.js
material_admin/static/plugins/markerclusterer/: markerclusterer.js
material_admin/templates/admin/: base.html  base2.html  change_form.html  change_list.html  index.html  login.html
material_admin/templates/admin/loader/: loader.html
material_admin/templates/admin/menu/: footer.html  headerbar.html  leftsidebar.html
material_admin/templatetags/: customFilter.py
