[metadata]
name = django-admin-material-able
version = 0.2
description = A Django admin based on material design.
long_description = file: README.rst
long_description_content_type = text/x-rst
download_url = https://github.com/mecatheclau/django-admin-material-able/archive/refs/tags/v0.2.tar.gz
url = https://github.com/mecatheclau/django-admin-material-able
author = MANIRAGABA Claude
author_email = mclaude@digitalsnatch.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = 
    Django>=3.0.2